--- a/docs/计算机基础/计算机基本单位.md
+++ b/docs/计算机基础/计算机基本单位.md
@@ -47,3 +47,12 @@
 
 ### 音视频文件
 例如，一个mp4文件时长为`163s`，文件大小为`23.9M(i)B`，其中视频轨道码率=`828kb/s`，音频轨道码率=`395kb/s`。则视频数据量约为`828kb x 163 = 134,964kb = 16,870.5kB = 16,870,500B = 16475.09K(i)B = 16.09M(i)B`，音频数据量约为`395kb x 163 = 64,385kb = 8048.12kB = 8,048,120B = 7.67M(i)B`，最终`16.08M(i)B + 7.67M(i)B = 23.75M(i)B`
+
+### 进制转换
+以下表为例，可以很方便的对常见大小进行进制转换。例如，`8GB = 8 x 1024 x 1024 x 1024B = 2^3 x 2^10 x 2^10 x 2^10B = 2^33B`，在内存地址中从`0`开始寻址，即`8GB`内存条寻址范围在`0~(2^33-1)`范围内，即`0x0~(0x200000000-0x1)=0x0~0x1FFFFFFFF`
+|二进制|十进制|十六进制|
+|---|---|---|
+|1111|15|0xF|
+
+## 参考资料
+1. 《计算机是如何工作的》第一章——计算机的硬件
