--- a/docs/计算机基础/计算机硬件.md
+++ b/docs/计算机基础/计算机硬件.md
@@ -2,7 +2,8 @@
 计算机中的基本组件，主存（内存），处理区（CPU），输入/输出(IO)。
 
 ## 主存
-分为内存地址、数据两部分。其中内存地址与内存大小有关，数据大小默认为最小单位`1字节(8bit)`。以`4GB(0x100000000B)`内存为例，
+分为内存地址、数据两部分。其中内存地址与内存大小有关，数据大小默认为最小单位`1字节(8bit)`。以`4GB(0x100000000B)`内存为例:
+
 |内存地址|示例数据|
 |---|---|
 |0x0|0xAB|
@@ -15,6 +16,7 @@
 
 ### 指令集架构
 主流架构有两种，`x86`和`ARM`。主流位数有`32位`、`64位`，指处理器一次可以处理的位数。例如32位处理器的寻址宽度为`32bit`可以处理`2^32`个地址，一个地址最小单位是`1字节`，所以32位处理器能处理`2^32B=4GB`内存。
+
 |常见名称|架构|架构版本|位数|
 |---|---|---|---|
 |x86_64/x64|x86|-|64位|
