--- a/docs/计算机基础/操作系统.md
+++ b/docs/计算机基础/操作系统.md
@@ -12,5 +12,15 @@
 |macOS|类UNIX|基于Darwin|
 |Windows 10|Windows|基于Windows NT|
 
+## 用户模式和内核模式
+* 用户模式的代码以进程的方式运行在操作系统中，每个进程有唯一的进程ID，不能直接访问硬件。
+* 用户模式进程内通过虚拟地址访问物理内存空间，不同进程的虚拟地址不能相互访问。
+* 用户模式的代码可以通过调用系统API切换到内核模式，操作系统/物理硬件。
+* 内核模式代码通过虚拟地址访问物理内存空间，可以访问整个内核地址。
+* 内核模式代码对整个操作系统、所有硬件有完整的访问权限。
+* 用户模式、内核模式均以线程作为最小单位运行代码。
+
 ## 参考资料
 1. [Linux和GNU系统](https://www.gnu.org/gnu/linux-and-gnu.html)
+2. [用户模式和内核模式](https://learn.microsoft.com/zh-cn/windows-hardware/drivers/gettingstarted/user-mode-and-kernel-mode)
+3. 《计算机是如何工作的》——第十章
